--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1 style="color: #CAEDFF;">Giới thiệu bản thân</h1>
 
         <!-- ảnh đại diện: inline CSS để căn giữa (yêu cầu đề) -->
-        <img src="duytan.jpg" alt="Ảnh đại diện" width="100" height="100"
+        <img src="duytan.jpeg" alt="Ảnh đại diện" width="100" height="100"
              style="display:block; margin: 0 auto;" />
 
         <h2 style="color: #D8B4F8;">Thông tin cơ bản</h2>
