--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Hoàn thành môn Quản lý dự án CNTT</td>
+                    <td>Hoàn thành môn Phát triển Ứng dụng Web</td>
                     <td>31/12/2025</td>
                     <td><input type="checkbox" name="goal1" /></td>
                 </tr>
                 <tr>
-                    <td>Nâng cao tiếng Anh (VNU-EPT)</td>
+                    <td>Nâng cao tiếng Anh (TOEIC)</td>
                     <td>30/06/2025</td>
                     <td><input type="checkbox" name="goal2" /></td>
                 </tr>
