--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     #contact {
-      background-image: url('pattern.png'); /* thay ảnh pattern.png bằng ảnh bạn muốn */
+      background-image: url('./pattern.jpeg'); /* thay ảnh pattern.png bằng ảnh bạn muốn */
       background-repeat: repeat;
       text-align: center;
       padding: 16px;
