--- a/index.html
+++ b/index.html
@@ -6,27 +6,22 @@
     <title>Giới thiệu - Trần Lê Duy Tân</title>
 
   <style>
-    /* 2 div chính */
     #intro {
       background-color: #F3FDE8;
       padding: 16px;
     }
 
     #contact {
-      background-image: url('./pattern.jpeg'); /* thay ảnh pattern.png bằng ảnh bạn muốn */
+      background-image: url('./pattern.jpeg'); 
       background-repeat: repeat;
       text-align: center;
       padding: 16px;
     }
 
-    /* Style chung cho h1..h4 */
     h1, h2, h3, h4 {
       font-size: 24px;
-      -webkit-text-stroke: 0.5px black; /* viền chữ màu đen */
-      text-shadow: 1px 1px 0 #000, -1px -1px 0 #000;
-    }
-
-    /* Bảng mục tiêu: viền 1px đen */
+      -webkit-text-stroke: 0.5px black;
+      text-shadow: 1px 1px 0 #000, -1px -1px 0 #000}
     table, th, td {
       border: 1px solid black;
       border-collapse: collapse;
@@ -38,7 +33,6 @@
 </head>
 <body>
 
-    <!-- NAV: menu dẫn tới 2 phần -->
     <nav>
         <ul class="main-nav">
             <li><a href="#intro">Giới thiệu bản thân</a></li>
@@ -48,10 +42,9 @@
 
     <!-- Phần 1: Giới thiệu bản thân -->
     <div id="intro" class="section intro">
-        <!-- inline color cho h1 theo đề -->
+        
         <h1 style="color: #CAEDFF;">Giới thiệu bản thân</h1>
 
-        <!-- ảnh đại diện: inline CSS để căn giữa (yêu cầu đề) -->
         <img src="duytan.jpeg" alt="Ảnh đại diện" width="100" height="100"
              style="display:block; margin: 0 auto;" />
 
@@ -82,8 +75,7 @@
             <li>Sóng gió</li>
             <li>Sao em vô tình</li>
         </ul>
-
-        <!-- Mục tiêu: thực hiện theo yêu cầu (bảng 3 cột, checkbox) -->
+        
         <h2 style="color: #D8B4F8;">Mục tiêu của bản thân</h2>
 
         <table class="goals" aria-label="Bảng mục tiêu">
@@ -163,11 +155,8 @@
     </form>
 </div>
 
-
-
-    <!-- Footer: theo công thức @2024 MSSV HoTen -->
     <footer>
-        <p>@2024 MSSV 23521406 Trần Lê Duy Tân</p>
+        <p>@2025 23521406 Trần Lê Duy Tân</p>
     </footer>
 
 </body>
