--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 </div>
 
     <footer>
-        <p>@2025 23521406 Trần Lê Duy Tân</p>
+        <a href="fb.com/ditan.1606">@2025 23521406 Trần Lê Duy Tân</a>
     </footer>
 
 </body>
